--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
-databases[sqlite]==0.9.0
+databases[aiomysql]==0.9.0          # ← This enables MySQL
 sqlalchemy==2.0.35
 pydantic==2.9.2
-python-multipart==0.0.9
-razorpay==1.4.0
-python-dotenv==1.0.1
+python-jose[cryptography]
+passlib[bcrypt]
+razorpay
+python-dotenv
