--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
-databases[aiomysql]==0.9.0          #  ← This enables MySQL
-sqlalchemy==2.0.35
-pydantic==2.9.2
+databases[aiomysql]==0.9.0
+sqlalchemy[asyncio]==2.0.35
 python-jose[cryptography]
 passlib[bcrypt]
 razorpay
