--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ fastapi==0.115.0
 uvicorn[standard]==0.30.6
 databases[aiomysql]==0.9.0
 sqlalchemy[asyncio]==2.0.35
+pydantic==2.9.2                 # ← NO [email] needed now!
 python-jose[cryptography]
 passlib[bcrypt]
 razorpay
+python-dotenv
